@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>eu.etaxonomy</groupId>
   <artifactId>cdmlib-parent</artifactId>
-  <version>5.4.0</version>
+  <version>5.5.0</version>
   <name>CDM Library</name>
   <description>The Java implementation of the Common Data Model (CDM), the data model for EDIT's internet platform for cybertaxonomy.</description>
   <url>http://cybertaxonomy.eu/cdmlib/</url>
@@ -284,7 +284,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.12</version>
         <configuration>
-          <argLine>-Xmx512M -XX:MaxPermSize=128M</argLine>
+          <argLine>-Xmx512M</argLine>
           <runOrder>alphabetical</runOrder>
           <includes>
             <include>**/*Test.java</include>
